# VUCSEDjango

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  render.sh  requirements.txt  sample.env  vercel.json
VUCSE/: asgi.py  settings.py  urls.py  wsgi.py
api/: serializers.py  urls.py  views.py
resources/: admin.py  models.py  serializers.py  urls.py  views.py
resources/migrations/: 0001_initial.py  0002_alter_semester_name.py  0003_course_prereq.py  0004_course_slug_resource_slug.py  0005_resource_tgid.py  0006_alter_course_semester.py  0007_alter_resource_course.py  0008_alter_course_slug.py  0009_remove_resource_tgid_alter_resource_link.py  0010_tgresource.py
templates/: base.html
templates/api/: index.html
templates/resources/: course.html  index.html  semester.html
